syntax = "proto3";
import "shared.proto";

package proxy_to_server;

message PlayerPackets {
  bytes data = 1;
  uint64 stream = 2;
}

message ProxyToServer {
  oneof proxy_to_server_message {
    PlayerPackets player_packets = 2;
  }
}